<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.AboutUsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_appBar_aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/id_toolbar_aboutus"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/id_appBar_aboutus"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/drawer_menu_about"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorTitle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/about_product_title"
            android:gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorTitle"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/about_product_content"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="@color/colorContent"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/about_team_title"
            android:gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorTitle"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/about_team_content"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="@color/colorContent"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/about_contact_title"
            android:gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorTitle"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/about_contact_content"
            android:gravity="left"
            android:textSize="14sp"
            android:textColor="@color/colorContent"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</RelativeLayout>